Bug 1248186 - Preliminary clean-up of nsFocusManager::GetSelectionLocation. r=masayuki

This patch shouldn't change behavior. It just removes a lot of noise
from that function.

In particular, it simplifies various conditions that can't happen, like
startNode being a text-node but a form control at the same time, or a
text-node and the root element.

Differential Revision: https://phabricator.services.mozilla.com/D186964